[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/mechanics/ShrinkingCircle.gd" type="Script" id=1]

[node name="ShrinkingCircle" type="Node"]

script = ExtResource( 1 )
wait_times = null
rise_times = null
initial_radius = 4000
shrink_percent = 0.6

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="WaitTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="RiseTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]


